--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build",
+    "build": "ng build",
+    "build:prod": "ng build --configuration production",
+    "deploy:cf": "npm run build:prod && npx wrangler deploy --assets=./dist/portfolio",
         "watch": "ng build --watch --configuration development",
         "test": "jest",
         "test:watch": "jest --watch",
