build: excluir assets pesados para Pages (ignorar models/commodore_64__computer.glb)

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,13 @@
                                 "glob": "**/*",
                                 "input": "public"
                             },
-                            "src/assets"
+                            {
+                                "glob": "**/*",
+                                "input": "src/assets",
+                                "ignore": [
+                                    "models/commodore_64__computer.glb"
+                                ]
+                            }
                         ],
                         "styles": [
                             "src/styles.scss"
