--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build",
-        "build:prod": "ng build --configuration production",
+    "build": "ng build",
+    "build:prod": "ng build --configuration production && node scripts/strip-large-assets.mjs",
         "deploy:cf": "npm run build:prod && npx wrangler deploy --assets=./dist/portfolio",
         "watch": "ng build --watch --configuration development",
         "test": "jest",
