deploy: apuntar output Angular 18 a dist/portfolio/browser (Pages y Workers)

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,6 @@ name = "portfolio-angular"
 compatibility_date = "2025-10-17"
 
 # Config para Cloudflare Pages
-pages_build_output_dir = "dist/portfolio"
+pages_build_output_dir = "dist/portfolio/browser"
 
 
