--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "ng build --configuration production && node scripts/strip-large-assets.mjs",
-        "deploy:cf": "npm run build:prod && npx wrangler deploy --assets=./dist/portfolio",
+        "build": "ng build",
+        "build:prod": "ng build --configuration production && node scripts/strip-large-assets.mjs",
+    "deploy:cf": "npm run build:prod && npx wrangler deploy --assets=./dist/portfolio/browser",
         "watch": "ng build --watch --configuration development",
         "test": "jest",
         "test:watch": "jest --watch",
