--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,7 +2,7 @@
   "name": "portfolio-angular",
   "compatibility_date": "2025-10-17",
   "assets": {
-    "directory": "./dist/portfolio",
+    "directory": "./dist/portfolio/browser",
     "binding": "ASSETS"
   }
 }
