--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "build:prod": "ng build --configuration production && node scripts/strip-large-assets.mjs",
-    "deploy:cf": "npm run build:prod && npx wrangler deploy --assets=./dist/portfolio/browser",
+        "build:prod": "ng build --configuration production",
+        "deploy:cf": "npm run build:prod && npx wrangler deploy --assets=./dist/portfolio",
         "watch": "ng build --watch --configuration development",
         "test": "jest",
         "test:watch": "jest --watch",
